
syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.coolpeng.grpcapiproto.registercenter";
option java_outer_classname = "register";
option objc_class_prefix = "HLW";
option java_generic_services = true;

package GrpcRegisterCenter;

service GrpcRegisterCenter {
  rpc registerService (RegisterServiceRequest) returns (RegisterServiceReply) {}
}



message RegisterServiceRequest {
  string ip = 1;
  string port = 2;
  string serviceName = 3;
}

// The response message containing the greetings
message RegisterServiceReply {
  string message = 1;
}